naxos/static/css/naxos.css
/* Footer */
html {
    position: relative;
    min-height: 100%;
}
body {
    /* Margin bottom by footer height */
    margin-bottom: 60px;
}
.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    /* Set the fixed height of the footer here */
    height: 60px;
}
/* Main (Category+Thread) views */
table#view thead {
    background: linear-gradient(#425e8e, #5171ae);
    color: white;
    font-size: 12px;
    padding: 20px;
}
table#view tbody td {
    background-color: #efefef;
    border-color: #f9f9f9;
    padding:2px 5px;
}
table#view tbody td.importantData {
    background-color: #ececec;
}
table#view tbody tr:hover td {
    background-color: #e8e8e8;
}
table.table tbody>tr>td.vert-align{
    vertical-align: middle;
}
.author {
    color: #333;
    font-size: 14px;
}
.author:hover {
    color: #333;
    text-decoration: none;
    border: 1px solid transparent;
    background-color: #F9F9F9;
    border-color: #CCC;
    padding: 1px 5px;
    font-size: 14px;
    border-radius: 3px;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
    border-bottom-right-radius: 3px;
    border-bottom-left-radius: 3px;
}
.author:focus {
    color: #333;
    text-decoration: none;
    border: 1px solid transparent;
    background-color: #F9F9F9;
    border-color: #CCC;
    padding: 1px 5px;
    font-size: 14px;
    border-radius: 3px;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
    border-bottom-right-radius: 3px;
    border-bottom-left-radius: 3px;
}
#caption {
    padding:0 0 40px 0;
}
textarea {
    resize: vertical;
}
/* Thread specific view */
.thread-icon {
    float: left;
}
.thread-title {
    margin-left:20px;
}
/* Post specific view */
div.post-header {
    background: linear-gradient(#425e8e, #5171ae);
    padding: 6px;
    font-size: 12px;
    color: white;
}
div.post-author {
    background-color: #f2f2f2;
}
div.post {
    background-color: #ececec;
    height: 100%;
    padding-top: 5px;
    padding-bottom: 10px;
}
.post blockquote {
    background-color: #f9f9f9;
}
/* Search specific view */
a.category {
    background: #5171ae;
    color: white;
    font-size: 12px;
    padding: 0 4px;
    border-radius: 3px;
    margin-left: 4px;
}
a.category:hover {
    background: white;
    color: #5171ae;
    text-decoration: none;
}
/* django-crispy-forms customization */
.asteriskField {
    display: none;
}
/* Smiley alignment + appearance */
.smiley {
    vertical-align:bottom;
    padding-bottom:4px;
}
.fake-link {
    cursor: pointer;
}
/* Image alignment in posts */
.post-content img {
    vertical-align:bottom;
    padding-bottom:4px;
}
/* Force some links appearance */
a.lastMessage:link {
    color: #333333;
}
a.lastMessage:visited {
    color: #333333;
}
/* Caption alignment */
p.legend {
    padding-left: 0;
    margin: 0;
}
/* Search bar tooltip size */
#search-helper .tooltip-inner {
    width: 200px;
    text-align:left;
}
/* Panel title size */
.panel-title {
    font-size: inherit;
}

